--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 /asset/image/
 /asset/javascript/*
 !/asset/javascript/jquery-1.11.2.min.js
-!/asset/javascript/jquery-owl.js
+!/asset/javascript/jquery.owl.js
 /asset/stylesheet/
+
+/content/
 
 /controller/*
 !/controller/.htaccess
