--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,24 @@
 
 /.idea/
 
-/404.php
-
 /asset/image/
 /asset/javascript/*
 !/asset/javascript/jquery-1.11.2.min.js
 !/asset/javascript/jquery.owl.js
 /asset/stylesheet/
+
+/config/*
+!/config/.htaccess
+!/config/DB.php
+!/config/Debug.php
+!/config/Default.php
+!/config/Image.php
+!/config/Input.php
+!/config/Loader.php
+!/config/Output.php
+!/config/PasswordHash.php
+!/config/UpgradeDB.php
+!/config/Validation.php
 
 /content/
 
