Minor improvements: 1. $_SERVER['PATH_INFO'] in CLI requests from now on is taken from argv array. 2. favicon.ico is from now on accessible. 3. _date validation rule implemented. 4. $.fn.popup() method (re-)implemented.

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 
-RewriteCond $1 !^(404\.php|asset|content|index\.php|robots\.txt)
+RewriteCond $1 !^(404\.php|asset|content|favicon\.ico|index\.php|robots\.txt)
 RewriteRule ^(.*)$ /index.php/$1 [L]
 
 RewriteCond %{SCRIPT_FILENAME} !404.php
